objects/ccpe_ppm__Cost_Resource_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>ccpe_ppm__Amount__c</fullName>
        <description>Used for cost calculations on the investment via roll ups</description>
        <inlineHelpText>How much is the cost on this date to the business</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccpe_ppm__Cost__c</fullName>
        <inlineHelpText>The cost item this schedule is against</inlineHelpText>
        <label>Cost</label>
        <referenceTo>ccpe_ppm__Cost__c</referenceTo>
        <relationshipLabel>Cost &amp; Resource Schedule</relationshipLabel>
        <relationshipName>Cost_Resource_Schedule</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccpe_ppm__Date__c</fullName>
        <description>Used for the cost calculation for the investment via rollups</description>
        <inlineHelpText>The date of the expected cost to be applied to the business</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccpe_ppm__Status__c</fullName>
        <description>Used for measuring planned costs against actual costs over time</description>
        <inlineHelpText>Whether this is a planned or a realized cost from the investment</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Actual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <validationRules>
        <fullName>ccpe_ppm__Actuals_Must_Be_Changed_After_Planning</fullName>
        <active>true</active>
        <description>Changes to actual costs can only occur during the Maintenance and Execution stages.</description>
        <errorConditionFormula>(ccpe_ppm__Cost__r.ccpe_ppm__Investment__r.RecordType.Name == &apos;Planning&apos; &amp;&amp;
   ISPICKVAL(ccpe_ppm__Status__c, &apos;Actual&apos;) &amp;&amp;
   ISCHANGED(ccpe_ppm__Amount__c))</errorConditionFormula>
        <errorDisplayField>ccpe_ppm__Amount__c</errorDisplayField>
        <errorMessage>Actual Costs cannot be changed during the Planning Stage.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ccpe_ppm__Date_Must_Match_Schedule_Type</fullName>
        <active>true</active>
        <description>Date must match the Cost Schedule set on the parent Investment.</description>
        <errorConditionFormula>DAY(ccpe_ppm__Date__c) != 1 ||
    ((ISPICKVAL(ccpe_ppm__Cost__r.ccpe_ppm__Investment__r.ccpe_ppm__Costs_Schedule__c,&apos;Quarterly&apos;) &amp;&amp;
     MOD(MONTH(ccpe_ppm__Date__c), 3) != 1) ||
     (ISPICKVAL(ccpe_ppm__Cost__r.ccpe_ppm__Investment__r.ccpe_ppm__Costs_Schedule__c, &apos;Annual&apos;) &amp;&amp;
      MONTH(ccpe_ppm__Date__c) != 1))</errorConditionFormula>
        <errorDisplayField>ccpe_ppm__Date__c</errorDisplayField>
        <errorMessage>Date does not match the Cost Schedule set on the Investment.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ccpe_ppm__Planned_Must_Be_Changed_During_Planning</fullName>
        <active>true</active>
        <description>Planned costs can only be changed during the Planning Stage.</description>
        <errorConditionFormula>(ccpe_ppm__Cost__r.ccpe_ppm__Investment__r.RecordType.Name == &apos;Maintenance&apos; ||
 ccpe_ppm__Cost__r.ccpe_ppm__Investment__r.RecordType.Name == &apos;Execution&apos;) &amp;&amp;
ISPICKVAL(ccpe_ppm__Status__c, &apos;Planned&apos;) &amp;&amp;
ISCHANGED(ccpe_ppm__Amount__c)</errorConditionFormula>
        <errorDisplayField>ccpe_ppm__Amount__c</errorDisplayField>
        <errorMessage>Cannot change a planned cost once the Planning Stage has concluded.</errorMessage>
    </validationRules>
</CustomObject>